# TheModernCppChallenge

./: .gitingnore  CMakeLists.txt
include/1.Math/: mathematics.h
lib/googletest-master/googletest/scripts/test/: sample1_unittest
lib/googletest-master/googletest/scripts/test/output/gtest/: gtest-all.cc  gtest.h
src/: CMakeLists.txt  main.cpp
src/1.Math/: CMakeLists.txt  findPrimeLessThan.cpp  gcd.cpp  lcm.cpp  sumOfIntsDividedBy3or5.cpp
tst/: CMakeLists.txt  mainTests.cpp
tst/1.Math/: CMakeLists.txt  findPrimeLessThanTests.cpp  gcdTests.cpp  lcmTests.cpp  mathTests.cpp  sumOfIntsDividedBy3or5Tests.cpp
